Update to use QuarkusRestClientBuilder and remove @QuarkusTest that isn't needed